# sklearn-transductive

./: .pre-commit-config.yaml  README.md  pyproject.toml
sklearn_transductive/: base.py
sklearn_transductive/adaptation/: __init__.py  _base.py  _harmonization.py  _kernel.py
sklearn_transductive/metrics/: __init__.py  _scorer.py
sklearn_transductive/model_selection/: __init__.py  _optuna.py  _search.py  _split.py  _validation.py
sklearn_transductive/pipeline/: __init__.py  _domain.py  _semi_supervised.py  _supervised.py
sklearn_transductive/utils/: _response.py  extmath.py  metaestimators.py
