[project]
name = "sklearn_transductive"
version = "0.1.0"
description = "An extension or override of scikit-learn model selection to allow transductive learning."
authors = [{ name = "Riza Rizky", email = "zarizky77@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.6.1",
    "optuna>=4.4.0",
    "imbalanced-learn>=0.13.0",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "isort==5.13.2",
    "pre-commit==4.2.0",
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
]


[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-v --cov=sklearn_transductive --cov-report term-missing"

[tool.isort]
known_first_party = ["sklearn_transductive"]
profile = "black"
line_length = 120
force_sort_within_sections = true

[tool.flake8]
exclude = [".git", "__pycache__"]
ignore = ["E203", "E501", "W503", "F401", "F403", "F405"]
max-line-length = 120
# E203 - whitespace before ':'. Opposite convention enforced by black
# E501 - line too long. Long-line code is reformated by black; remaining long lines in docstrings are OK
# W503 - line break before binary operator. W503 is incompatible with PEP 8, don't use it
# F401 - unused '*' imports
# F403 - 'from module import *' used; unable to detect unused imports
# F405 - 'from module import name' used; unable to detect unused imports
