[project]
name = "sklearn_transductive"
version = "0.1.0"
description = "An extension or override of scikit-learn model selection to allow transductive learning."
authors = [{ name = "Riza Rizky", email = "zarizky77@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
addopts = "-v --cov=sklearn_transductive --cov-report term-missing"


[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "F401", "F403", "F405"]
exclude = [".git", "__pycache__"]

[tool.ruff.lint.isort]
known-first-party = ["sklearn_transductive"]
force-sort-within-sections = true
